<?xml version="1.0"?>
<package format="2">
  <name>motor_controller</name>
  <version>0.0.0</version>
  <description>The motor_controller package</description>
  <maintainer email="hoge@todo.todo">shunsugar</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

<!--  <build_depend></build_depend>-->

<!--  <exec_depend></exec_depend>-->

<!--  <export></export>-->
</package>
